logs/118618249
C:\Users\lemur\CLionProjects\HexaneC2\core\src\commands.cpp: In function 'void Commands::UpdatePeer(_parser*)':
C:\Users\lemur\CLionProjects\HexaneC2\core\src\commands.cpp:230:52: error: 'struct _hexane::<unnamed>' has no member named 'smb'
  230 |         auto name_length = x_wcslen(Ctx->transport.smb->ingress_name) * sizeof(WCHAR);
      |                                                    ^~~
C:\Users\lemur\CLionProjects\HexaneC2\core\src\commands.cpp:232:28: error: 'struct _hexane::<unnamed>' has no member named 'smb'
  232 |         if (Ctx->transport.smb->ingress_name) {
      |                            ^~~
C:\Users\lemur\CLionProjects\HexaneC2\core\src\commands.cpp:233:37: error: 'struct _hexane::<unnamed>' has no member named 'smb'
  233 |             x_memset(Ctx->transport.smb->ingress_name, 0, name_length);
      |                                     ^~~
In file included from ../core/include/commands.hpp:4,
                 from C:\Users\lemur\CLionProjects\HexaneC2\core\src\commands.cpp:1:
C:\Users\lemur\CLionProjects\HexaneC2\core\src\commands.cpp:234:35: error: 'struct _hexane::<unnamed>' has no member named 'smb'
  234 |             x_free(Ctx->transport.smb->ingress_name);
      |                                   ^~~
../core/monolith.hpp:215:75: note: in definition of macro 'x_free'
  215 | #define x_free(size)                    Ctx->nt.RtlFreeHeap(Ctx->heap, 0, size)
      |                                                                           ^~~~
C:\Users\lemur\CLionProjects\HexaneC2\core\src\commands.cpp:237:54: error: 'struct _hexane::<unnamed>' has no member named 'smb'
  237 |         Parser::ParserWcscpy(parser, &Ctx->transport.smb->ingress_name, nullptr);
      |                                                      ^~~
